# yolov5-RGBD

./: .gitignore  CMakeLists.txt  README.md  qml.qrc  qtquickcontrols2.conf
iconwin/: app.rc
include/: cpuinfer.h  imageprocess.h  ocvimageprovider.h  statusmonitor.h  threadcontroller.h  utility.h
qml/: CalibratePage.qml  CircleProgress.qml  CustomDialog.qml  DemoPage.qml  HomePage.qml  InfoPage.qml  SettingsPage.qml  drawer.qml  main.qml
script/: nvidia_gpu_info.ps1
src/: cpuinfer.cpp  imageprocess.cpp  main.cpp  ocvimageprovider.cpp  statusmonitor.cpp  threadcontroller.cpp  utility.cpp
video/: .gitignore
weights/: .gitignore
